--- a/index.html
+++ b/index.html
@@ -4,11 +4,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./Resources/css/styles.css">
-    <link rel="stylesheet" href="./Resources/css/reset.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./resources/css/reset.css">
+    <link rel="stylesheet" href="./resources/css/style.css">
+    <script src="./resources/script.js"></script>
 </head>
 <body>
-    <h1>Portfolio</h1>
+    
+    <!-- Nav Section -->
+
+    <section id="nav">
+        <div class="container">
+            <div class="content">
+                <h2>Ada Lovelace</h2>
+            </div>
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Main Section -->
+
+    <main>
+
+        <!-- About Me Section -->
+
+        <section id="about-me">
+            <div class="container">
+                <div class="content">
+                    <h2>About Me</h2>
+                    <p>Hi! I'm Ada, Countess of Lovelace and am an English mathematician and writer, chiefly known for my work on Charles Babbage's proposed mechanical general-purpose computer, the Analytical Engine.</p>
+                    <p>I am one of the first to recognize that machines have applications beyond pure calculation, and to have published the first algorithm intended to be carried out by such a machine.</p>
+                    <p>In my free time I like to read about scientific developments, mathematics, and computational mathematics. I also like to take my chances of winning big.</p>
+                    <p>Fun fact! I've been programing for 6,518,060,802 seconds!</p>
+                </div>
+                <div class="image-container">
+                    <img src="./resources/images/ada-lovelace-20825279-1-402.jpg">
+                </div>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+
+        <section id="projects">
+            <div class="container">
+                <h2>Projects</h2>
+                <ul>
+                    <li><a href="#">The first computer program</a></li>
+                    <li><a href="#">The Analytical Engine</a></li>
+                    <li><a href="#">The Ada programming language</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Skills Section -->
+
+        <section id="skills">
+            <div class="container">
+                <h2>Skills</h2>
+                <div class="content">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                    <img src="./resources/images/01.jpg">
+                </div>                   
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+
+        <section id="contact"></section>
+
+    </main>
+
+    <!-- Footer Section -->
+
+    <footer id="footer">
+        <div class="container">
+            <div class="content">
+                <p>Made with</p>
+                <div class="image-container">
+                    <img src="./resources/images/heart2.png">
+                </div>
+                <p>in London</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
