--- a/index.html
+++ b/index.html
@@ -54,9 +54,18 @@
             <div class="container">
                 <h2>Projects</h2>
                 <ul>
-                    <li><a href="#">The first computer program</a></li>
-                    <li><a href="#">The Analytical Engine</a></li>
-                    <li><a href="#">The Ada programming language</a></li>
+                    <li><a href="#">
+                        <img src="./resources/images/arrow2.png">
+                        <p>The first computer program</p>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="./resources/images/arrow2.png">
+                        <p>The Analytical Engine</p>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="./resources/images/arrow2.png">
+                        <p>The Ada programming language</p>
+                    </a></li>
                 </ul>
             </div>
         </section>
@@ -67,20 +76,48 @@
             <div class="container">
                 <h2>Skills</h2>
                 <div class="content">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
-                    <img src="./resources/images/01.jpg">
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
+                    <div class="image-container">
+                        <img src="./resources/images/01.jpg">
+                    </div>
                 </div>                   
             </div>
         </section>
