Make bare Contact page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html" title="Opens in a new window">Contact</a></li>
             </ul>
         </div>
     </section>
