--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="resources\css\reset.css">
-    <link rel="stylesheet" type="text/css" href="resources\css\style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="./resources/script.js"></script>
 </head>
 <body>
@@ -43,7 +43,7 @@
                     <p>Fun fact! I've been programing for 6,518,060,802 seconds!</p>
                 </div>
                 <div class="image-container">
-                    <img src="./resources/images/ada-lovelace-20825279-1-402.jpg">
+                    <img src="ada-lovelace-20825279-1-402.jpg">
                 </div>
             </div>
         </section>
@@ -55,15 +55,15 @@
                 <h2>Projects</h2>
                 <ul>
                     <li><a href="#">
-                        <img src="./resources/images/arrow2.png">
+                        <img src="arrow2.png">
                         <p>The first computer program</p>
                     </a></li>
                     <li><a href="#">
-                        <img src="./resources/images/arrow2.png">
+                        <img src="arrow2.png">
                         <p>The Analytical Engine</p>
                     </a></li>
                     <li><a href="#">
-                        <img src="./resources/images/arrow2.png">
+                        <img src="arrow2.png">
                         <p>The Ada programming language</p>
                     </a></li>
                 </ul>
@@ -77,46 +77,46 @@
                 <h2>Skills</h2>
                 <div class="content">
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                     <div class="image-container">
-                        <img src="./resources/images/01.jpg">
+                        <img src="01.jpg">
                     </div>
                 </div>                   
             </div>
