Sort of finish project.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="./resources/script.js"></script>
+    <script src="script.js" async></script>
 </head>
 <body>
     
@@ -43,7 +43,7 @@
                     <p>Fun fact! I've been programing for 6,518,060,802 seconds!</p>
                 </div>
                 <div class="image-container">
-                    <img src="ada-lovelace-20825279-1-402.jpg">
+                    <img id="ada" src="ada-lovelace-20825279-1-402.jpg">
                 </div>
             </div>
         </section>
@@ -135,7 +135,7 @@
             <div class="content">
                 <p>Made with</p>
                 <div class="image-container">
-                    <img src="./resources/images/heart2.png">
+                    <img src="01.jpg">
                 </div>
                 <p>in London</p>
             </div>
